--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,4 +1,4 @@
-\documentclass[draft,oneside,10pt]{book}
+\documentclass[oneside,11pt]{book}
 
 \usepackage{graphicx}
 
@@ -31,8 +31,8 @@
   headsep=3ex,         
 }
 
-\doublespacing
-% \onehalfspacing
+% \doublespacing
+\onehalfspacing
 
 
 \usepackage{fancyhdr} % for the header
@@ -283,7 +283,7 @@
 %******************************************************************************************************
 \begin{document}
 
-\degreetitle{The Use of Landsat 8 for Monitoring \\of Fresh and Coastal Waters}
+\degreetitle{The Use of Landsat 8 for Monitoring of \\Fresh and Coastal Waters}
 \degreeauthor{Javier A. Concha}
 % \degreedate{November 18, 2015}
 \degreedate{\today{}}
@@ -302,7 +302,7 @@
 
 \makePHDproposalapproval
 
-\makecopyright
+% \makecopyright
 
 % \maketitle
 
