APA citations done.

--- a/Appendix.tex
+++ b/Appendix.tex
@@ -82,7 +82,7 @@ Notes:
 
 % method described by \citet{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site 
 
-This section describes how to take the remote-sensing measurement using a single instrument that measures radiance (spectroradiometer or spectrometer) such as a SVC \citep{SVCHR1024i} or an ASD \citep{ASDManual2012} instrument. This procedure is taken from \citep{Mobley:1999} and \citep{Mueller1995}. 
+This section describes how to take the remote-sensing measurement using a single instrument that measures radiance (spectroradiometer or spectrometer) such as a SVC \citep{SVCHR1024i} or an ASD \citep{ASDManual2012} instrument. This procedure is taken from \citet{Mobley:1999} and \citet{Mueller1995}. 
 
 Recall that the \gls{rrs} (\autoref{eq:Rrs}) is defined as
 
