--- a/Introduction.tex
+++ b/Introduction.tex
@@ -34,7 +34,7 @@ In this work, a different approach for atmospheric correction was developed base
 After having atmospherically corrected the image, the next step is to apply a retrieval algorithm that outputs maps of CPA concentrations. The standard algorithms for CPA retrieval used by the heritage ocean color missions do not retrieve the CPAs simultaneously. An example of these algorithms is the \acrfull{oc3} algorithm for retrieving chlorophyll-{\it a} concentrations \citep{OReilly2000}. This is an empirical algorithm that finds the best fit for a function between a ratio of two bands and a {\it in situ} chlorophyll-{\it a} concentration data set.
 
 % Retrieval: What we are proposing
-\citet{Gerace:2013} developed an algorithm for the retrieval of CPAs based on a \acrfull{lut} inversion using simulated Landsat 8 imagery. In this work, we extend Gerace's approach to real Landsat 8 imagery \citep{Concha2013IGARSS}. The retrieval algorithm uses a combination of least square error minimization algorithm and a non-linear optimization routine to find the best match for a specific reflectance signal in a LUT of spectral water-leaving reflectance curves. The LUT is created using HydroLight 5, an in-water radiative transfer model (\citep{Mobley:2005}). Each curve in the LUT has a specific set of water component concentrations. This is performed on a pixel-by-pixel basis. 
+\citet{Gerace:2013} developed an algorithm for the retrieval of CPAs based on a \acrfull{lut} inversion using simulated Landsat 8 imagery. In this work, we extend Gerace's approach to real Landsat 8 imagery \citep{Concha2013IGARSS}. The retrieval algorithm uses a combination of least square error minimization algorithm and a non-linear optimization routine to find the best match for a specific reflectance signal in a LUT of spectral water-leaving reflectance curves. The LUT is created using HydroLight 5, an in-water radiative transfer model \citep{Mobley:2005}. Each curve in the LUT has a specific set of water component concentrations. This is performed on a pixel-by-pixel basis. 
 
 In order to have outputs that are representative of the water bodies that are being studied, \acrfull{iops} of those specific waters have to be input to the HydroLight model. To accomplish this, collections of water samples were conducted at the same time that the Landsat 8 satellite passed over the area of study (the Rochester Embayment, Rochester, NY). After collection, these water samples were analyzed in the lab to obtain the IOPs for the CPAs. Furthermore, \acrfull{aops}, specifically remote-sensing reflectances, and backscattering measurements were also collected for further comparison and to pursue closure between HydroLight AOP results and {\it in situ} AOP measurements.
 
