--- a/ThesisBeamer.tex
+++ b/ThesisBeamer.tex
@@ -1,5 +1,5 @@
 % On a dry run about 45-50 min.
-% Remember your telling a story mostly to your peers. The committee already knows it. Make it interesting to the students. Not to much detail. A litle background on what the state of the art is why all three constituents are hard if they vary independently and then what you did.
+% Remember your telling a story mostly to your peers. The committee already knows it. Make it interesting to the students. Not to much detail. A little background on what the state of the art is why all three constituents are hard if they vary independently and then what you did.
 % JRS
 \documentclass[]{beamer}
 	\usepackage[latin1]{inputenc}
