--- a/Summary.tex
+++ b/Summary.tex
@@ -23,9 +23,9 @@ The MoB-ELM algorithm was applied to {three \todo{three?}} Landsat 8 images in o
 
 % ----- added From SPIE SD
 % \subsection{Comparison with Standard Algorithms}
-\todo{include rest of the images in the NRMSE calculation for Rrs}For further validation, the \gls{mobelm} algorithm was compared with three algorithms utilizing the NASA's standard algorithms based on the methods developed by \citep{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values (\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall.
+\todo{include rest of the images in the NRMSE calculation for Rrs}For further validation, the \gls{mobelm} algorithm was compared with three algorithms utilizing the NASA's standard algorithms based on the methods developed by \citet{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values (\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall.
 
-\todo{Dr.Schott: check this paragraph!}The study of coastal water includes an extra signal not taken into account in the remote sensing of the open ocean: adjacency effect product of the bright targets represented by the shoreline. This effect is not taken into account in the \citep{Gordon:1994} approach. However, it needs to be analyzed to know how much influence it could have in the sensor-reaching signal. Fortunately, the MoB-ELM algorithm inherently takes care of this signal since the reflectance values are taken at the surface and they represent ground-truth.
+\todo{Dr.Schott: check this paragraph!}The study of coastal water includes an extra signal not taken into account in the remote sensing of the open ocean: adjacency effect product of the bright targets represented by the shoreline. This effect is not taken into account in the \citet{Gordon:1994} approach. However, it needs to be analyzed to know how much influence it could have in the sensor-reaching signal. Fortunately, the MoB-ELM algorithm inherently takes care of this signal since the reflectance values are taken at the surface and they represent ground-truth.
 
 % Glint and adjacency effects were also not addressed in this work, and they could affect the atmospheric correction.
 
@@ -52,7 +52,7 @@ One of the limitation of the developed retrieval algorithm is that the \gls{mobe
 
 Some pixels from the lake shoreline include signal from the bottom causing outliers in the retrieval results since the bottom reflectance was not accounted for in the process. The next version of this retrieval algorithm should address this issue. 
 
-One approach that was not tested in the research is using the results from the traditional \gls{elm}  or MoB-ELM \todo{MoB-ELM only?} algorithms as input to the standard NASA models and investigated whether the retrieval improves or not. On the other hand, the results from the \citep{Gordon:1994} algorithm could be used as input to the developed LUT-based inversion method and investigate if the results improve or not.
+One approach that was not tested in the research is using the results from the traditional \gls{elm}  or MoB-ELM \todo{MoB-ELM only?} algorithms as input to the standard NASA models and investigated whether the retrieval improves or not. On the other hand, the results from the \citet{Gordon:1994} algorithm could be used as input to the developed LUT-based inversion method and investigate if the results improve or not.
 % -------------------------------------
 \section{Future Work}
 \label{sec:futurework}
@@ -66,7 +66,7 @@ Some phenomena affecting the sensor-reaching signal were not included in this re
 
 % ------------------------------
 \subsection{Hydrodynamics models} 
-The results from the retrieval could be used for training hydrodynamics models to predict the water bodies behavior, as suggested by \citep{Pahlevan:2012} and \citep{GeraceThesis}. The spatial resolution of Landsat 8 allows for resolving fine features in the scene such as rivers, and river plumes. Therefore, the hydrodynamics model could be tested and/or calibrated with these data to simulate river and river discharges, for instance.
+The results from the retrieval could be used for training hydrodynamics models to predict the water bodies behavior, as suggested by \citet{Pahlevan:2012} and \citet{GeraceThesis}. The spatial resolution of Landsat 8 allows for resolving fine features in the scene such as rivers, and river plumes. Therefore, the hydrodynamics model could be tested and/or calibrated with these data to simulate river and river discharges, for instance.
 
 % ------------------------------
 \subsection{Investigate New Sensor Enhancements for Future Missions}
