Added flow chart and fix color tabs not highlighted...

--- a/beamercolorthemecranejavier.sty
+++ b/beamercolorthemecranejavier.sty
@@ -21,9 +21,9 @@
 \setbeamercolor{palette primary}{fg=craneblack,bg=craneorange}
 \setbeamercolor{palette secondary}{fg=craneblack,bg=craneorange}
 \setbeamercolor{palette tertiary}{fg=craneblack,bg=craneorange}
-\setbeamercolor{palette quaternary}{fg=craneblack,bg=craneorange}
+\setbeamercolor{palette quaternary}{fg=craneblack,bg=white}
 
-\setbeamercolor{titlelike}{parent=palette quaternary}
+\setbeamercolor{titlelike}{parent=palette tertiary}
 
 \setbeamercolor{block title}{fg=craneblack,bg=craneorange}
 \setbeamercolor{block title alerted}{use=alerted text,fg=craneblack,bg=alerted text.fg!75!bg}
