Added new figures with masked and good labels

--- a/ThesisBeamer.tex
+++ b/ThesisBeamer.tex
@@ -1095,24 +1095,25 @@
 \end{frame}
 % ----------------------------------- Slide -------------------------------------
 \begin{frame}{\LARGE CPA Retrieval Process}{\vspace{0.1cm}\Large Results 09-19-13}
-\vspace{-0.3cm}
+\vspace{-0.2cm}
 \begin{figure}[htbp!]
   \begin{minipage}[a]{0.485\linewidth}
   	\hspace{-0.5cm}
       % \centering
-      \includegraphics[trim=0 20 0 30,clip,height=3.7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLmap130919_150420}  
+      \includegraphics[trim=0 0 0 0,clip,height=3.6cm,grid=on]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CHLmap130919masked.png}  
   \end{minipage}
 \hfill
 %% TSS
   \begin{minipage}[a]{0.485\linewidth}
       % \centering
-      \vspace{-0.0cm}
-      \includegraphics[trim=0 30 0 10,clip,height=3.7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSmap130919_150420}  
+      \vspace{-0.1cm}
+      \includegraphics[trim=0 0 0 0,clip,height=3.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/TSSmap130919masked.png}  
   \end{minipage}
 %% CDOM
   \begin{minipage}[c]{1.0\linewidth}
+  	\vspace{0.05cm}
       \centering
-      \includegraphics[trim=0 0 0 30,clip,height=3.7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMmap130919_150420}  
+      \includegraphics[trim=0 0 0 0,clip,height=3.7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CDOmap130919masked.png}  
   \end{minipage}
 %
   % \caption{CPA retrieval results for the Landsat 8 image acquired on 09-19-2013 (scene LC80160302013262LGN00). Concentration maps (left) and measured vs retrieved plots (right). The dashed line represent the 1:1 line. (Labels: LongS: Long Pond south, Cranb: Cranberry Pond, OntOS: Lake Ontario off-shore, and OntNS: Lake Ontario near-shore). \label{fig:CPAsMaps130919} } 
